[project]
name = "foss4g-lt-001"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Takahiro Miyoshi", email = "takahiro-miyoshi@sankichi.net" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
"foss4g-lt-001" = "foss4g_lt_001:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/foss4g_lt_001"]
